src/test/deca/context/valid/provided/test01.deca
class A{
    boolean b;
    float a;
}