src/test/deca/context/invalid/provided/testi24.deca
class A{}
{
    A a = new float();
}